--- a/backend/views/Zomato3.mustache
+++ b/backend/views/Zomato3.mustache
@@ -184,7 +184,7 @@
       <amp-story-page id="zomato-link">
   <!-- Background Image Layer -->
   <amp-story-grid-layer template="fill">
-    <amp-img src="{{slides.image_urls.4}}" width="720" height="1280" layout="responsive" class="zoom-in-out"></amp-img>
+    <amp-img src="{{slides.image_urls[4]}}" width="720" height="1280" layout="responsive" class="zoom-in-out"></amp-img>
   </amp-story-grid-layer>
 
   <!-- Heading Text Layer -->
@@ -196,7 +196,7 @@
 
   <!-- ✅ Call-to-action link layer -->
   <amp-story-cta-layer>
-    <a href="{{{slides.zomato_link}}}" class="cta-button" target="_blank">View on Zomato</a>
+    <a href="{{slides.zomato_link}}" class="cta-button" target="_blank">View on Zomato</a>
   </amp-story-cta-layer>
 </amp-story-page>
 
