--- a/backend/views/test.mustache
+++ b/backend/views/test.mustache
@@ -112,7 +112,7 @@
       poster-portrait-src="{{image_url}}">
 
       <!-- Intro Slide -->
-      <amp-story-page id="intro">
+      <amp-story-page id="intro-{{category_name}}">
         <amp-story-grid-layer template="fill">
           <amp-img class="zoom-bg" src="{{image_url}}" width="720" height="1280" layout="responsive"></amp-img>
         </amp-story-grid-layer>
@@ -129,7 +129,7 @@
 
       <!-- Dish Slides -->
       {{#dishes}}
-      <amp-story-page id="{{name}}">
+      <amp-story-page id="{{name}}-{{category_name}}">
         <amp-story-grid-layer template="fill">
           <amp-img class="zoom-bg" src="{{image_url}}" width="720" height="1280" layout="responsive"></amp-img>
         </amp-story-grid-layer>
@@ -144,7 +144,7 @@
       {{/dishes}}
 
       <!-- Outro Slide -->
-      <amp-story-page id="outro">
+      <amp-story-page id="outro-{{category_name}}">
         <amp-story-grid-layer template="fill">
           <amp-img class="zoom-bg" src="{{image_url}}" width="720" height="1280" layout="responsive"></amp-img>
         </amp-story-grid-layer>
